--- a/index.html
+++ b/index.html
@@ -42,36 +42,63 @@
 
   <hr>
 
-<!-- Two-way binding -->
+  <!-- Two-way binding -->
 
-<div id="app2">
-<input type="text" v-model="name">
-<p>{{ name }}</p>
-</div>
+  <div id="app2">
+    <input type="text" v-model="name">
+    <p>{{ name }}</p>
+  </div>
 
-<hr>
+  <hr>
 
-<!-- Reacting to changes with computed propertes -->
+  <!-- Reacting to changes with computed propertes -->
 
-<div id="app3">
-<button v-on:click="counter++">Increase</button>
-<button v-on:click="counter--">Decrease</button>
-<button v-on:click="secondCounter++">Second Increase</button>
-<p>Counter: {{ counter }} | {{ secondCounter }}</p>
-<p>Result: {{ result() }} | {{ output }}</p>
-</div>
+  <div id="app3">
+    <button v-on:click="counter++">Increase</button>
+    <button v-on:click="counter--">Decrease</button>
+    <button v-on:click="secondCounter++">Second Increase</button>
+    <p>Counter: {{ counter }} | {{ secondCounter }}</p>
+    <p>Result: {{ result() }} | {{ output }}</p>
+  </div>
 
-<hr>
+  <hr>
 
-<!-- Shortcuts -->
+  <!-- Shortcuts -->
 
-<div id="app4">
-  <button @click="changeLink">Click to Change Link</button>
-  <a :href="link">Link</a>
-</div>
+  <div id="app4">
+    <button @click="changeLink">Click to Change Link</button>
+    <a :href="link">Link</a>
+  </div>
+
+  <hr>
+
+  <!-- Dynamic styling with CSS classed -->
+
+  <div id="app5">
+    <div class="demo" @click="attachRed = !attachRed" :class="divClasses"></div>
+    <div class="demo" :class="{red: attachRed}"></div>
+    <div class="demo" :class="[color, {red: attachRed}]"></div>
+    <br>
+    <input type="text" v-model="color">
+  </div>
+
+  <br>
+  <br>
 
 
+  <!-- Setting Styles Dynamically (without CSS) -->
 
+  <hr>
+
+  <div id="app6">
+<div class="demo" :style="{backgroundColor: color}"></div>
+<div class="demo" :style="myStyle"></div>
+<div class="demo" :style="[myStyle, {height: width + 'px'}]"></div>
+<br>
+<input type="text" v-model="color">
+<input type="text" v-model="width">
+
+  </div>
 
 
 
